# MaxPyLang

./: LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: genindex.html  index.html  indices.html  install.html  search.html  searchindex.js  support.html  tutorial.html
docs/API/: API.html  inlet.html  maxobject.html  maxpatch.html  outlet.html
docs/doctrees/: environment.pickle  index.doctree  indices.doctree  install.doctree  support.doctree  tutorial.doctree
docs/doctrees/API/: API.doctree  inlet.doctree  maxobject.doctree  maxpatch.doctree  outlet.doctree
docs/doctrees/topics/: ext_packages.doctree  linked_files.doctree  topics.doctree  unknown_objs.doctree
docs/source/: install.rst
docs/topics/: ext_packages.html  linked_files.html  topics.html  unknown_objs.html
maxpylang/cli/: __init__.py  errors.py  export_amxd.py  io.py  main.py  output.py  resolve.py
maxpylang/tools/objfuncs/: instantiation.py
maxpylang/tools/patchfuncs/: deleting.py  exposed.py  patchcords.py  placing.py
tests/: __init__.py  test_cli.py  test_cli_pytest.py  test_export_amxd.py  test_resolve.py
